# _RayTracingInOptix_

./: .gitignore  CMakeLists.txt  readme.md
common/gdt/: CMakeLists.txt
common/gdt/cmake/: FindOptiX.cmake  configure_optix.cmake
common/glfWindow/: GLFWindow.cpp  GLFWindow.h
input/: P3_r1.pov  P3_r2.pov  P3_r3.pov  p3_e1.pov  p3_e2-1.pov  p3_e3.pov  p3_e4.pov  p3_lab.pov  p3_lab2.pov  p3_simp.pov  p4_mesh-1.pov  p4_mesh2-1.pov  p4_r1.pov  p4_r2-1.pov  p4_r2-5.pov  p4_r2.pov  p4_r4-1.pov  p4_r4.pov  p4_tm-2.pov  p4_tm2-1.pov  scene.pov  simple-3.pov  simple.pov  simple1-1.pov  simple1.pov  simple2-1.pov  simple2.pov  simple3.pov  texturemap.pov  trans0.pov  trans1.pov  trans2.pov  transobj.pov
src/: Camera.h  LaunchParams.h  Light.h  Model.cpp  Model.h  Object.h  Parser.h  Pigment.h  Plane.h  SampleRenderer.cpp  SampleRenderer.h  Scene.h  Sphere.h  Util.h  devicePrograms.cu  main.cpp  vec3.h
